2004-03-10  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-line-iter-span-wrapper.c

	Fixed stupid typo that was ref-ing rather than unref-ing in the dispose handler.  I believe the code no longer leaks any CongEditorLineIter objects.
	
	* cong-editor-line-manager.c

	Suppress some debug logging; fix reference leaks to CongEditorLineIter objects

	* cong-traversal-node.c, cong-traversal-node.h, cong-document.h

	Ported CongTraversalNode over to cong-object macros in order to track reference leaks

	* cong-document-traversal.c

	Fixed a leak of the CongTraversalNode subtree (and hence of CongEditorNode objects) when doing an add node before/after operation; was happening when undoing an apply span tag operation.

2004-03-09  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c, cong-menus.c, cong-object.c, cong-object.h

	Debug window that list all objects of each class in a tree view, to help track leaks.

	* cong-editor-area-text-fragment.c, cong-editor-node-comment.c, cong-editor-node-comment.h, cong-editor-node-document.c, cong-editor-node-document.h, cong-editor-node-dtd.c, cong-editor-node-dtd.h, cong-editor-node-text.c, cong-editor-node-text.h, cong-editor-node.h, cong-object.h

	Created boilerplate macros for generating CongEditorNode subclasses, to help track reference leaks; fixed a bug that stops dispose functions chaining up to their parent class implementation

2004-03-08  Dave Malcolm  <david@davemalcolm.demon.co.uk>
